Load vuls by company
